--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.6",
+    "angular-route": "~1.4.6",
+    "angular-animate": "~1.4.6",
     "semantic": "semantic-ui#~2.1.4"
   }
 }
